feat: add all functions for order; need to change specification and change to authprincipal
